--- a/audit_agent/requirements.txt
+++ b/audit_agent/requirements.txt
@@ -3,3 +3,6 @@ uvicorn[standard]==0.24.0
 beautifulsoup4==4.12.2
 requests==2.31.0
 aiohttp==3.9.1
+pytest==7.4.0
+pytest-asyncio==0.21.0
+httpx==0.24.1
