--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
   orchestrator:
     build: ./orchestrator
     ports:
-      - "8000:8000" # Expose the orchestrator to the host machine
+      - "8000:8000"
     env_file:
       - .env
+    volumes:
+      - ./shared:/app/shared  # Mount shared directory
     depends_on:
       - audit_agent
       - reporting_agent
@@ -15,19 +17,26 @@ services:
 
   audit_agent:
     build: ./audit_agent
+    ports:
+      - "8001:8001" 
     env_file:
       - .env
+    volumes:
+      - ./shared:/app/shared  # Mount shared directory
     networks:
       - seorchestra_network
 
   reporting_agent:
     build: ./reporting_agent
+    ports:
+      - "8002:8002" 
     env_file:
       - .env
+    volumes:
+      - ./shared:/app/shared  # Mount shared directory
     networks:
       - seorchestra_network
 
-# Define a network so the containers can find each other by name
 networks:
   seorchestra_network:
     driver: bridge
